Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-34318

mariadb-dump SQL syntax error with MAX_STATEMENT_TIME against Percona MySQL server

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Critical
    • Resolution: Fixed
    • 11.4.2
    • 10.5.26, 10.6.19, 10.11.9, 11.1.6, 11.2.5, 11.4.3
    • Scripts & Clients
    • Client: Arch Linux / mariadb-clients-11.4.2-1

      Server: Percona Xtradb cluster operator v1.14.0
      mysql Ver 8.0.27-18.1 for Linux on x86_64 (Percona XtraDB Cluster (GPL), Release rel18, Revision ac35177, WSREP version 26.4.3)

    Description

      Hi!

      Hopefully we can report bugs regarding mariadb-dump -> Percona/MySQL?

      Simply running mariadb-dump -h <hostname> -u <username> -p<password> db causes the following error:

      mariadb-dump: Couldn't execute '/*!100100 SET @@MAX_STATEMENT_TIME=0.000000 */': You have an error in your SQL syntax; check the manual that corresponds to your MySQL server version for the right syntax to use near '0 SET @@MAX_STATEMENT_TIME=0.000000 */' at line 1 (1064)

      Running the same command using a bookworm container works:

      user@component-755c5bbd69-t5l82$ mariadb-dump --version
      mariadb-dump Ver 10.19 Distrib 10.11.6-MariaDB, for debian-linux-gnu (x86_64)
      user@component-755c5bbd69-t5l82$ mariadb-dump -h $DB_HOSTNAME -u $DB_USERNAME -p$DB_PASSWORD $DB_NAME
      – MariaDB dump 10.19 Distrib 10.11.6-MariaDB, for debian-linux-gnu (x86_64)

      -- Host: mysql1-haproxy.<namespace>.svc.cluster.local Database: [redacted]
      – ------------------------------------------------------
      – Server version 8.0.27-18.1
      [snip]

      So something (presumably MDEV-18702?) broke compatibility with the Percona/MySQL server setup.

      I haven't been able to set a workaround, as it does not seem there is any way to disable setting MAX_STATEMENT_TIME. I can use --max_statement_time=0 or --max_statement_time= to set the value to 0 but that doesn't remove the statement. Only solution for my use case seems to run an older version of mariadb-dump, or to use a MySQL client (which is probably better against a MySQL server of course, but that is inconvenient as I simply wish to use my distribution's MariaDB client).

      $ mariadb-dump --print-defaults
      mariadb-dump would have been started with the following arguments:

      Attachments

        Activity

          People

            serg Sergei Golubchik
            nmonfils Nathan Monfils
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.