MDEV-34318 mariadb-dump SQL syntax error with MAX_STATEMENT_TIME against Percona MySQL server

protect MariaDB conditional comments from a bug
in Percona MySQL comment parser